--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         "orderedUuid"
     ],
     "require": {
-        "php": "^7.1",
+        "php": "^7.1|^8.0",
         "illuminate/support": "~5|~6|~7|~8"
     },
     "autoload": {
